samples/task/valid/R36.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps><step><cmd/></step></steps>
    <result><p>Task Result</p></result>
    <example><p>An example related to the task.</p></example>
  </taskbody>
</task>