samples/task/invalid/R44.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <result><p>Task Result</p></result>
    <steps><step><cmd/></step></steps>
  </taskbody>
</task>